--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,6 +56,7 @@ span label {
 	display: block;
 	text-align: center;
 	font-size: .75em;
+	margin-bottom: .5rem;
 }
 footer {
 	text-align: center;
